Fixed layout issues.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -996,7 +996,7 @@
     }
     p {
       text-align: left;
-      width: 85%;
+      width: 80%;
       margin: 0 auto 20px;
       line-height: 1.7em;
       font-size: 18px;
@@ -1008,7 +1008,7 @@
       }
       .mentor-links {
         text-align: left;
-        width: 85%;
+        width: 80%;
         margin: 15px auto 0;
         @media (max-width: $screen-md-min) {
           text-align: center;
